I was change some code in view layout xml

--- a/app/src/main/res/layout/view_holder.xml
+++ b/app/src/main/res/layout/view_holder.xml
@@ -1,53 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="270dp"
     android:padding="10dp">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="210dp"
-        android:orientation="vertical"
-        >
-
 
         <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/imgPhone"
             android:layout_width="match_parent"
-            android:layout_height="170dp"
+            android:layout_height="270dp"
             android:src="@drawable/ic_arrow_key"/>
            app:actualImageScaleType="fitCenter"
            app:placeholderImage="@drawable/img_default_image"
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    <FrameLayout
+        android:layout_width="396dp"
+        android:layout_height="46dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="0dp">
 
-            <TextView
-                android:id="@+id/textName"
-                android:layout_width="294dp"
-                android:layout_height="match_parent"
-                android:background="@color/color_background_text"
-                android:gravity="start"
-                android:paddingLeft="10dp"
-                android:paddingTop="5dp"
-                android:text="@string/Brand_Name"
-                android:textColor="@color/color_text"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+        <TextView
+            android:id="@+id/textName"
+            android:layout_width="251dp"
+            android:layout_height="44dp"
+            android:background="@color/color_background_text"
+            android:gravity="start"
+            android:paddingLeft="10dp"
+            android:paddingTop="5dp"
+            android:text="@string/Brand_Name"
+            android:textColor="@color/color_text"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/textPrice"
-                android:layout_width="92dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="end"
-                android:gravity="center"
-                android:textStyle="bold"
-                android:textColor="@color/color_text_red"
-                android:textSize="25sp"
-                android:text="@string/Price" />
+        <TextView
+            android:id="@+id/textPrice"
+            android:layout_width="92dp"
+            android:layout_height="44dp"
+            android:layout_gravity="end"
+            android:gravity="center"
+            android:text="@string/Price"
+            android:textColor="@color/color_text_red"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
-        </FrameLayout>
+    </FrameLayout>
 
-    </LinearLayout>
+
 
 </RelativeLayout>
