--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
             android:text="All"
             android:gravity="center_vertical"
             android:layout_gravity="end|center_vertical"
-            android:drawableRight="@drawable/ic_arrow_key"/>
+            android:drawableRight="@drawable/ic_arrow_right"/>
 
     </FrameLayout>
 
